// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MakeswiftPage metadata and seo tag rendering does NOT render any page metadata when passing all options as false 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering does NOT render any page metadata when passing empty options 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering does NOT render any page metadata when passing false 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering only renders selective metadata when passing options 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <title>
    Test Title
  </title>
  <meta
    content="Test Description"
    name="description"
  />
  <meta
    content="Test Description"
    property="og:description"
  />
  <meta
    content="Test Description"
    name="twitter:description"
  />
  <meta
    content="test, keywords"
    name="keywords"
  />
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering renders a self-referencing canonical tag when metadata.canonicalUrl is true but no user-specified canonical url was provided 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <title>
    Test Title
  </title>
  <link
    href="https://example.com/favicon.ico"
    rel="icon"
    type="image/x-icon"
  />
  <link
    href="https://example.com/test-page-path"
    rel="canonical"
  />
  <meta
    content="noindex"
    name="robots"
  />
  <meta
    content="Test Description"
    name="description"
  />
  <meta
    content="Test Description"
    property="og:description"
  />
  <meta
    content="Test Description"
    name="twitter:description"
  />
  <meta
    content="test, keywords"
    name="keywords"
  />
  <meta
    content="https://example.com/image.jpg"
    property="og:image"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="https://example.com/image.jpg"
    name="twitter:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering renders all metadata by default (without passing prop) 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <title>
    Test Title
  </title>
  <link
    href="https://example.com/favicon.ico"
    rel="icon"
    type="image/x-icon"
  />
  <link
    href="https://example.com/user-specified-canonical-url-path"
    rel="canonical"
  />
  <meta
    content="noindex"
    name="robots"
  />
  <meta
    content="Test Description"
    name="description"
  />
  <meta
    content="Test Description"
    property="og:description"
  />
  <meta
    content="Test Description"
    name="twitter:description"
  />
  <meta
    content="test, keywords"
    name="keywords"
  />
  <meta
    content="https://example.com/image.jpg"
    property="og:image"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="https://example.com/image.jpg"
    name="twitter:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering renders all metadata when passing all options as true 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <title>
    Test Title
  </title>
  <link
    href="https://example.com/favicon.ico"
    rel="icon"
    type="image/x-icon"
  />
  <link
    href="https://example.com/user-specified-canonical-url-path"
    rel="canonical"
  />
  <meta
    content="noindex"
    name="robots"
  />
  <meta
    content="Test Description"
    name="description"
  />
  <meta
    content="Test Description"
    property="og:description"
  />
  <meta
    content="Test Description"
    name="twitter:description"
  />
  <meta
    content="test, keywords"
    name="keywords"
  />
  <meta
    content="https://example.com/image.jpg"
    property="og:image"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="https://example.com/image.jpg"
    name="twitter:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;

exports[`MakeswiftPage metadata and seo tag rendering renders all metadata when passing true 1`] = `
<head>
  <style
    href="makeswift-base-styles"
    precedence="high"
  >
    
        html {
            font-family: sans-serif;
        }
        div#__next {
            overflow: hidden;
        }
        
  </style>
  <title>
    Test Title
  </title>
  <link
    href="https://example.com/favicon.ico"
    rel="icon"
    type="image/x-icon"
  />
  <link
    href="https://example.com/user-specified-canonical-url-path"
    rel="canonical"
  />
  <meta
    content="noindex"
    name="robots"
  />
  <meta
    content="Test Description"
    name="description"
  />
  <meta
    content="Test Description"
    property="og:description"
  />
  <meta
    content="Test Description"
    name="twitter:description"
  />
  <meta
    content="test, keywords"
    name="keywords"
  />
  <meta
    content="https://example.com/image.jpg"
    property="og:image"
  />
  <meta
    content="image/jpeg"
    property="og:image:type"
  />
  <meta
    content="https://example.com/image.jpg"
    name="twitter:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="{"draft":false,"inBuilder":false}"
    name="makeswift-draft-info"
  />
</head>
`;
